# sim-world

./: LICENSE  pom.xml
algorithm/: pom.xml  tmp.txt
algorithm/resources/: custom2.pbtxt  exptected.pbtxt  jnijavacpp.cpp  ops.pbtxt  train.pbtxt  variable-test.pbtxt
algorithm/resources/ops/: array_ops.cc  array_ops.h  array_ops_internal.cc  array_ops_internal.h  audio_ops.cc  audio_ops.h  audio_ops_internal.cc  audio_ops_internal.h  batch_ops.cc  batch_ops.h  batch_ops_internal.cc  batch_ops_internal.h  bitwise_ops.cc  bitwise_ops.h  bitwise_ops_internal.cc  bitwise_ops_internal.h  boosted_trees_ops.cc  boosted_trees_ops.h  boosted_trees_ops_internal.cc  boosted_trees_ops_internal.h  candidate_sampling_ops.cc  candidate_sampling_ops.h  candidate_sampling_ops_internal.cc  candidate_sampling_ops_internal.h  checkpoint_ops.cc  checkpoint_ops.h  checkpoint_ops_internal.cc  checkpoint_ops_internal.h  control_flow_ops.cc  control_flow_ops.h  control_flow_ops_internal.cc  control_flow_ops_internal.h  ctc_ops.cc  ctc_ops.h  ctc_ops_internal.cc  ctc_ops_internal.h  cudnn_rnn_ops.cc  cudnn_rnn_ops.h  cudnn_rnn_ops_internal.cc  cudnn_rnn_ops_internal.h  (+128 more)
algorithm/src/test/resources/: carpole-dqn.pbtxt  dqn.pbtext
atari-py/: pom.xml
atari-py/cppbuild/: CMakeLists.txt  cppbuild.sh
atari-py/cppbuild/src/: ale_c_wrapper.h
buf/: pom.xml
buf/cppbuild/: CMakeLists.txt  cppbuild.sh
buf/cppbuild/linux-x86_64/include/buf/: library.h
buf/cppbuild/src/: buf.cpp  buf.h  library.cpp
graphics/: pom.xml
javacpp/: cppbuild.sh  pom.xml
javacpp/atari-py/: cppbuild.sh  pom.xml
javacpp/atari-py/cpp/: CMakeLists.txt
javacpp/buf/: pom.xml
javacpp/buf/cpp/: CMakeLists.txt
javacpp/buf/cpp/src/: buf.cpp  buf.h
python-interpreter/: pom.xml
resources/: custom.pbtxt  mlp.pbtxt  q-network.pbtxt
rl-algo/: g2-python.pb  g2-python.pbtxt  pom.xml
tensorflow/: pom.xml
tensorflow-jni/: pom.xml
tensorflow-ops-generator/: pom.xml
tensorflow-ops-generator/python-interpreter/: pom.xml
tensorflow-ops-generator/python-interpreter/resources/play-antlr4/: pom.xml
tensorflow-ops-generator/resources/: ops.pbtxt
tensorflow-ops-generator/resources/gen_gradients/: math_grad.py
util/: pom.xml
world/: pom.xml
(+458 files in other folders)
